--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     <title>Интернет-магазин</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/75a0c00f53.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="app">
     <header>
-        <div class="logo">E-shop</div>
+        <div class="logo">BRAND</div>
         <div class="cart">
 
             <filter-el></filter-el>
@@ -21,8 +23,7 @@
         <products ref="products"></products>
     </main>
 </div>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/ProductComponent.js"></script>
 <script src="js/CartComponent.js"></script>
 <script src="js/FilterComp.js"></script>
